@@ -20,7 +20,7 @@ provider-name="Gujal">
 </addon>
 
 <addon id="plugin.video.deccandelight"
-version="1.0.7"
+version="1.0.8"
 name="Deccan Delight"
 provider-name="Gujal">
 <requires>
